--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@ contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.61.1
 kiwisolver==1.4.9
+librt==0.7.8
 matplotlib==3.10.8
+mypy==1.19.1
+mypy_extensions==1.1.0
 numpy==2.4.2
 packaging==26.0
+pathspec==1.0.4
 pillow==12.1.0
 pyparsing==3.3.2
 python-dateutil==2.9.0.post0
 six==1.17.0
+typing_extensions==4.15.0
